Tue Sep 10 14:37:01 2013  Shota Fukumori  <sorah@tubusu.net>

	* vm_backtrace.c (vm_backtrace_to_ary): Ignore the second argument if
	  it is nil. [Bug #8884] [ruby-core:57094]

	* test/ruby/test_backtrace.rb (test_caller_with_nil_length):
	  Test for above.

Tue Sep 10 12:39:17 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* class.c (method_entry_i): should exclude refined methods from
	  instance method list.  [ruby-core:57080] [Bug #8881]

Tue Sep 10 12:05:04 2013  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>

	* io.c (rb_f_printf): [DOC] add missing parenthesis in rdoc.

Tue Sep 10 10:08:00 2013  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>

	* NEWS: Update RubyGems note.

Tue Sep 10 09:51:22 2013  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems:  Update to RubyGems 2.1.0.  Fixes CVE-2013-4287.

	  See http://rubygems.rubyforge.org/rubygems-update/CVE-2013-4287_txt.html
	  for CVE information.

	  See http://rubygems.rubyforge.org/rubygems-update/History_txt.html#label-2.1.0+%2F+2013-09-09
	  for release notes.

	* test/rubygems:  Tests for the above.

Mon Sep  9 21:31:45 2013  Tanaka Akira  <akr@fsij.org>

	* process.c: Remove spaces between SI prefix and unit to follow
	  SI brochure.
	  http://www.bipm.org/en/si/si_brochure/
	  https://www.nmij.jp/library/units/si/

	* time.c: Ditto.

	* ext/socket/ancdata.c: Ditto.

Mon Sep  9 16:55:59 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* vm_method.c (rb_add_refined_method_entry): clear cache in the
	  refined class since refining a method entry is modifying the class.
	  [ruby-core:57079] [Bug #8880]

Mon Sep  9 09:14:58 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* tool/rbinstall.rb (Gem::Specification#initialize): default date to
	  RUBY_RELEASE_DATE.  [ruby-core:57072] [Bug #8878]

	* tool/rbinstall.rb (Gem::Specification#to_ruby): add date.

Sun Sep  8 16:01:54 2013  Tanaka Akira  <akr@fsij.org>

	* rational.c (f_gcd): Relax the condition to use GMP.
